:sparkles: 深色模式支持

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #1e1e1e;
+                color: #fff;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div style="max-width: 500px; margin: 30px auto;padding: 2\30px;" id="detalk"></div>
+    <div style="max-width: 500px; margin: 30px auto;padding: 3px 30px;" id="detalk"></div>
     <script src="../dist/detalk.js"></script>
     <script>
         detalk.init({
