:bug: 修复代码块不支持深色模式的错误

--- a/demo/dev.html
+++ b/demo/dev.html
@@ -12,10 +12,15 @@
                 color: #fff;
             }
         }
+        body {
+            transition: all .3s;
+        }
     </style>
 </head>
-<body>
-    <div style="max-width: 500px; margin: 30px auto;padding: 3px 30px;" id="detalk"></div>
+<body style="max-width: 500px; margin: 30px auto;padding: 3px 30px;">
+    <button onclick="light();">Light</button>
+    <button onclick="dark();">Dark</button>
+    <div style="margin-top: 30px;" id="detalk"></div>
     <script src="../dev/detalk.js"></script>
     <script>
         detalk.init({
@@ -23,6 +28,14 @@
             el: "#detalk",
             path: "/"
         });
+        function light() {
+            document.body.style.backgroundColor = "#fff";
+            document.body.style.color = "#000";
+        }
+        function dark() {
+            document.body.style.backgroundColor = "#1e1e1e";
+            document.body.style.color = "#fff";
+        }
     </script>
 </body>
 </html>
