:memo: Update Demo

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,6 +21,8 @@
     <button onclick="light();">Light</button>
     <button onclick="dark();">Dark</button>
     <div style="margin-top: 30px;" id="detalk"></div>
+    <!-- Polyfill -->
+    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
     <script src="../dist/detalk.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked@4/marked.min.js"></script>
     <link rel="stylesheet"
