--- a/demo/dev.html
+++ b/demo/dev.html
@@ -38,6 +38,12 @@
                     hljs.highlightElement(el);
                 });
             },
+            label: {
+                'admin': {
+                    name: '管理员',
+                    class: 'label-green',
+                }
+            }
         });
         function light() {
             document.body.style.backgroundColor = "#fff";
