:memo: Update Demo

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -40,6 +40,12 @@
                     hljs.highlightElement(el);
                 });
             },
+            label: {
+                'admin': {
+                    name: '管理员',
+                    class: 'label-green',
+                }
+            }
         });
         function light() {
             document.body.style.backgroundColor = "#fff";
