:sparkles: 支持 GitHub 登录

--- a/demo/dev.html
+++ b/demo/dev.html
@@ -43,6 +43,9 @@
                     name: '管理员',
                     class: 'label-green',
                 }
+            },
+            login: {
+                github: '8cce104300dc1617f5b7'
             }
         });
         function light() {
