:sparkles: 支持 reCAPTCHA

--- a/demo/dev.html
+++ b/demo/dev.html
@@ -79,7 +79,9 @@
             },
             login: {
                 github: '8cce104300dc1617f5b7'
-            }
+            },
+            recaptchaSiteKey: '6LefUdojAAAAAHe0G0p0MaW5U93AnH_G5QViDl92',
+            recaptchaLoaded: false,
         });
         function light() {
             document.body.style.backgroundColor = "#fff";
