--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,7 +45,9 @@
                     name: '管理员',
                     class: 'label-green',
                 }
-            }
+            },
+            recaptchaSiteKey: '6LefUdojAAAAAHe0G0p0MaW5U93AnH_G5QViDl92',
+            recaptchaLoaded: false,
         });
         function light() {
             document.body.style.backgroundColor = "#fff";
