--- a/demo/demo.html
+++ b/demo/demo.html
@@ -48,6 +48,9 @@
             },
             recaptchaSiteKey: '6LefUdojAAAAAHe0G0p0MaW5U93AnH_G5QViDl92',
             recaptchaLoaded: false,
+            pasteImage: async () => {
+                
+            }
         });
         function light() {
             document.body.style.backgroundColor = "#fff";
