:memo: Update Demo

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -29,7 +29,22 @@
         href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/default.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
     <script>
-        detalk.parse = marked.parse
+        detalk.parse = marked.parse;
+
+        function blobToBase64(blob) {
+            return new Promise((resolve, reject) => {
+                const fileReader = new FileReader();
+                fileReader.onload = (e) => {
+                resolve(e.target.result);
+                };
+                // readAsDataURL
+                fileReader.readAsDataURL(blob);
+                fileReader.onerror = () => {
+                reject(new Error('blobToBase64 error'));
+                };
+            });
+        }
+
         detalk.init({
             url: "https://detalk.deta.dev/",
             el: "#detalk",
@@ -48,8 +63,19 @@
             },
             recaptchaSiteKey: '6LefUdojAAAAAHe0G0p0MaW5U93AnH_G5QViDl92',
             recaptchaLoaded: false,
-            pasteImage: async () => {
-                
+            pasteImage: async (blob) => {
+                let base64 = (await blobToBase64(blob)).split(',')[1];
+                var suffix = blob.type.split("/")[1];
+                var imgUrl = await fetch("https://p1.ck3.tech/s/", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        content: base64,
+                        suffix,
+                    })
+                }).then(resp => resp.json());
+
+                return `https://p1.ck3.tech/${imgUrl.url}`;
+
             }
         });
         function light() {
