--- a/demo/demo.html
+++ b/demo/demo.html
@@ -74,7 +74,7 @@
                     })
                 }).then(resp => resp.json());
 
-                return `https://p1.ck3.tech/${imgUrl.url}`;
+                return `https://p1.ck3.tech${imgUrl.url}`;
 
             }
         });
